--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "bulma": "^0.4.2",
     "history": "^4.6.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
