--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
+    "react-spinkit": "^3.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
